
13/12/2018 - Update2
    Approval History
    Case Flow History
    Assign Case - Tick on assign
    HTML Component Usability

11/01/2018
    //All Warnings/Errors    
    //Toggle - Password - Step3 - Any page where required
    //Home/Work Address - Full Name field backend integration
    //Progress Bar - ProfileCompletion
    //Preview for ProfileCompletion
    //Multi-Select for Prefered Timings
    //Contact Name, Location - Mandate Raise a Case
    //Case Status - VolName and Role
    //Top - Nav - Role of volunteer
    //My Cases - Search
    //Success - Assign - msg
    //Recpt Dashboard - My Cases - Add Column - Case accepted/not
    //ShorctCuts - Raise a Case
    //Top - Nav -User - Back Button
    //Top Case select - Top Vol - Break
    Recpt Dashboard - //If you click My Cases before Case Assign TimeoOut is Over - pointerEvents are a problem
        //Logout - onclick of button not text-link
    //Loading Screen - Case Photos - Case Details - Vol and Recpt. Dashboard
    //Loading Screen - All Tabs - Vol Dashboard
    //Loading Screen - All Tabs
    Action Center - Top Nav - Recpt dashboard
    Mobile No. - Error - Styling - Mobile Number Validation - Explicit - or Try to remove msg
    Loading Screen - Assign Case (First Screen)
    //Update Cases - onclick - Active
    Loading Screen - MyCases - Vol-MyCases
    Case Details - Vol Dashboard - Header - #Bird/Animal etc.
    onclick - accept case - refresh - active/recent/closed
    Update Case - Assigning Part - Vol Name
        Description field not working
    Case Details - Vol Dashboard - Location - Not working
    Reverse Date
    !important Case Assigned to another vol - rejected by the peroson assigned to !important
    Perform Styling Run through

Call - Saturday - Before Assummed production Sunday
    Back Button - ProfileCompletion
    Accept/Reject - Case-Vol-Dashboard - Admin
    Close Case Validation - Vol-Dashboard
    Action Center - Recpt. Dashboard