@@ -202,7 +202,7 @@ main div {
     box-sizing: border-box;
     box-shadow: 0px 0px 20px #BBB;
     margin-top: 5vh;
-    margin-bottom: 10vh;
+    margin-bottom: 5vh;
 }
 
 .slider-header {
@@ -324,6 +324,36 @@ main div {
     margin-right: 5vw;
 }
 
+/*--------OTHER-ELEMENTS------------------------------------------------------*/
+/*-------------------ENLARGE-PHOTO---------------------*/
+#dynamic_image_enlarge {
+    display: none;
+    position: fixed;
+    top: 10vh;
+    left: 0vw;
+    width: 100vw;
+    max-height: 90vh;
+    background-color: #B9CCC4;
+    z-index: 1001;
+    text-align: center;
+}
+
+#dynamic_image_enlarge img {
+    margin-top: 10vh;
+    max-width: 70vw;
+    margin-bottom: 3vh;
+    background-color: rgba(255,255,255,0.6);
+}
+
+#dynamic_image_enlarge button {
+    background-color: #333;
+    color: white;
+    padding: 2vh 3vh;
+    float: right;
+    letter-spacing: 1px;
+    margin-bottom: 3vh;
+    margin-right: 10vw;
+}
 
 /*--------------------------BOTTOM-ACTION-BAR------------------------*/
 #bottom-action-bar {
