@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
     <meta content="ie=edge" http-equiv="X-UA-Compatible">
     <title>Profile Completion - Step 1</title>
-    <link href="/static/css/basic-template.css" rel="stylesheet" th:href="@{/css/basic-template.css}">
-    <link href="/static/css/Profile-Completion/profile-completion.css" rel="stylesheet" th:href="@{/css/Profile-Completion/profile-completion.css}">
-    <link rel="manifest" href="/static/icons/manifest.json" th:href="@{/icons/manifest.json}">
-    <script src="/static/js/jquery-3.3.1.min.js" th:src="@{/js/jquery-3.3.1.min.js}"></script>
+    <link href="/static/css/basic-template.css" rel="stylesheet" th:href="@{/css/basic-template.css(v=1550307657)}">
+    <link href="/static/css/Profile-Completion/profile-completion.css" rel="stylesheet" th:href="@{/css/Profile-Completion/profile-completion.css(v=1550307657)}">
+    <link rel="manifest" href="/static/icons/manifest.json" th:href="@{/icons/manifest.json(v=1550307657)}">
+    <script src="/static/js/jquery-3.3.1.min.js" th:src="@{/js/jquery-3.3.1.min.js(v=1550307657)}"></script>
 </head>
 <body>
 
